metrics/grafana.yaml
# This is not a recommended configuration, and further support should be available
# from the Prometheus and Grafana communities.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: strimzi-monitoring
  labels:
    app: strimzi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grafana
  template:
    metadata:
      labels:
        name: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:7.3.7
          ports:
          - name: grafana
            containerPort: 3000
            protocol: TCP
          volumeMounts:
          - name: grafana-data
            mountPath: /var/lib/grafana
          - name: grafana-logs
            mountPath: /var/log/grafana
          - name: grafana-config
            mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
            readOnly: true
            subPath: datasource.yaml
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: grafana-data
          emptyDir: {}
        - name: grafana-logs
          emptyDir: {}
        - name: grafana-config
          configMap:
            name: grafana-config

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: strimzi
spec:
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    name: grafana
  type: ClusterIP
