metrics/grafana-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: strimzi-monitoring
  labels:
    app: strimzi
spec:
  host: GRAFANA_HOST_PLACEHOLDER
  port:
    targetPort: 3000
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
